--- a/templates/register.html
+++ b/templates/register.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Registration</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Registration{% endblock %}
+
+{% block content %}
     <div class="container mt-5">
         <h2 class="text-center">Create an account</h2>
         <div class="col-8 offset-2">
@@ -17,6 +15,12 @@
                             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                         </div>
                     {% endfor %}
+                {% endif %}
+                {% if form.errors %}
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        {{ form.errors['confirm_password'][0] }}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
                 {% endif %}
                 <div class="mb-3">
                     {{ form.username.label }} {{ form.username(class="form-control") }}
@@ -33,11 +37,9 @@
                 <div class="mb-3">
                     {{ form.confirm_password.label }} {{ form.confirm_password(class="form-control") }}
                 </div>
-                <button type="submit" class="btn btn-primary">Create account</button>
+                <button type="submit" class="btn btn-primary">Create account
+                </button>
             </form>
         </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+{% endblock %}
